SIMPLEX-153 Refactor, sonar fixes.